sdl3/packages/include_C/SDL_mutex.h

#define SDL_THREAD_ANNOTATION_ATTRIBUTE__(x)   __attribute__((x))
#define SDL_THREAD_ANNOTATION_ATTRIBUTE__(x)   
#define SDL_CAPABILITY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(capability(x))
#define SDL_SCOPED_CAPABILITY \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(scoped_lockable)
#define SDL_GUARDED_BY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(guarded_by(x))
#define SDL_PT_GUARDED_BY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(pt_guarded_by(x))
#define SDL_ACQUIRED_BEFORE(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(acquired_before(x))
#define SDL_ACQUIRED_AFTER(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(acquired_after(x))
#define SDL_REQUIRES(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(requires_capability(x))
#define SDL_REQUIRES_SHARED(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(requires_shared_capability(x))
#define SDL_ACQUIRE(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(acquire_capability(x))
#define SDL_ACQUIRE_SHARED(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(acquire_shared_capability(x))
#define SDL_RELEASE(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(release_capability(x))
#define SDL_RELEASE_SHARED(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(release_shared_capability(x))
#define SDL_RELEASE_GENERIC(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(release_generic_capability(x))
#define SDL_TRY_ACQUIRE(x, y) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(try_acquire_capability(x, y))
#define SDL_TRY_ACQUIRE_SHARED(x, y) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(try_acquire_shared_capability(x, y))
#define SDL_EXCLUDES(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(locks_excluded(x))
#define SDL_ASSERT_CAPABILITY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(assert_capability(x))
#define SDL_ASSERT_SHARED_CAPABILITY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(assert_shared_capability(x))
#define SDL_RETURN_CAPABILITY(x) \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(lock_returned(x))
#define SDL_NO_THREAD_SAFETY_ANALYSIS \
  SDL_THREAD_ANNOTATION_ATTRIBUTE__(no_thread_safety_analysis)
#define SDL_MUTEX_TIMEDOUT  1
struct SDL_Mutex;
typedef struct SDL_Mutex SDL_Mutex;
extern  SDL_Mutex * SDL_CreateMutex(void);
extern  void  SDL_LockMutex(SDL_Mutex *mutex) SDL_ACQUIRE(mutex);
extern  int  SDL_TryLockMutex(SDL_Mutex *mutex) SDL_TRY_ACQUIRE(0, mutex);
extern  void  SDL_UnlockMutex(SDL_Mutex *mutex) SDL_RELEASE(mutex);
extern  void  SDL_DestroyMutex(SDL_Mutex *mutex);
struct SDL_RWLock;
typedef struct SDL_RWLock SDL_RWLock;
#define SDL_RWLOCK_TIMEDOUT SDL_MUTEX_TIMEDOUT
extern  SDL_RWLock * SDL_CreateRWLock(void);
extern  void  SDL_LockRWLockForReading(SDL_RWLock *rwlock) SDL_ACQUIRE_SHARED(rwlock);
extern  void  SDL_LockRWLockForWriting(SDL_RWLock *rwlock) SDL_ACQUIRE(rwlock);
extern  int  SDL_TryLockRWLockForReading(SDL_RWLock *rwlock) SDL_TRY_ACQUIRE_SHARED(0, rwlock);
extern  int  SDL_TryLockRWLockForWriting(SDL_RWLock *rwlock) SDL_TRY_ACQUIRE(0, rwlock);
extern  void  SDL_UnlockRWLock(SDL_RWLock *rwlock) SDL_RELEASE_GENERIC(rwlock);
extern  void  SDL_DestroyRWLock(SDL_RWLock *rwlock);
struct SDL_Semaphore;
typedef struct SDL_Semaphore SDL_Semaphore;
extern  SDL_Semaphore * SDL_CreateSemaphore(Uint32 initial_value);
extern  void  SDL_DestroySemaphore(SDL_Semaphore *sem);
extern  int  SDL_WaitSemaphore(SDL_Semaphore *sem);
extern  int  SDL_TryWaitSemaphore(SDL_Semaphore *sem);
extern  int  SDL_WaitSemaphoreTimeout(SDL_Semaphore *sem, Sint32 timeoutMS);
extern  int  SDL_PostSemaphore(SDL_Semaphore *sem);
extern  Uint32  SDL_GetSemaphoreValue(SDL_Semaphore *sem);
struct SDL_Condition;
typedef struct SDL_Condition SDL_Condition;
extern  SDL_Condition * SDL_CreateCondition(void);
extern  void  SDL_DestroyCondition(SDL_Condition *cond);
extern  int  SDL_SignalCondition(SDL_Condition *cond);
extern  int  SDL_BroadcastCondition(SDL_Condition *cond);
extern  int  SDL_WaitCondition(SDL_Condition *cond, SDL_Mutex *mutex);
extern  int  SDL_WaitConditionTimeout(SDL_Condition *cond,
                                                SDL_Mutex *mutex, Sint32 timeoutMS);